make events bubble, switch to delegate, add tests

--- a/sample/src/samples/charts/bar-charts/custom-pan-and-zoom.html
+++ b/sample/src/samples/charts/bar-charts/custom-pan-and-zoom.html
@@ -5,8 +5,8 @@
               k-value-axis.bind="{min: 0, max: 12}"
               k-series.bind="[{type: 'column', field: 'val'}]"
               k-transitions.bind="false"
-              k-on-drag.trigger="onDrag($event)"
-              k-on-drag-end.trigger="onDragEnd($event)"
-              k-on-zoom.trigger="onZoom($event)">
+              k-on-drag.delegate="onDrag($event)"
+              k-on-drag-end.delegate="onDragEnd($event)"
+              k-on-zoom.delegate="onZoom($event)">
     </k-chart>
 </template>
