--- a/sample/src/samples/charts/funnel-charts/basic-use.html
+++ b/sample/src/samples/charts/funnel-charts/basic-use.html
@@ -57,7 +57,7 @@
                                        k-large-step.bind: 0.1;
                                        k-show-buttons.bind: false"
                              value="0.3"
-                             k-on-change.trigger="refresh()"
+                             k-on-change.delegate="refresh()"
                              k-slider.ref="slider"/></li>
               </ul>
               <i>The ratio between the bases of the whole funnel element</i>
