--- a/sample/src/samples/dropdownlist/basic-use.html
+++ b/sample/src/samples/dropdownlist/basic-use.html
@@ -10,7 +10,7 @@
                             					k-data-value-field: value;
                             					k-data-source.bind: data;
                             					k-index.bind: 0;"
-                    k-on-change.trigger="onChange()"
+                    k-on-change.delegate="onChange()"
                     k-value="1"
                     style="width: 100%;" />
 
