--- a/sample/src/samples/progressbar/custom-label.html
+++ b/sample/src/samples/progressbar/custom-label.html
@@ -14,7 +14,7 @@
                                        k-max: 9;
                                        k-animation.bind: false"
                        k-progress-bar.ref="pb"
-                       k-on-change.trigger="onChange($event.detail)"
+                       k-on-change.delegate="onChange($event.detail)"
                        style="width: 100%;">
                   </div>
               </li>
