--- a/sample/src/samples/autocomplete/events.html
+++ b/sample/src/samples/autocomplete/events.html
@@ -4,12 +4,12 @@
       <p><strong>Select a state in USA:</strong></p>
       <p>
           <input k-autocomplete="k-data-source.bind: items;"
-                 k-on-open.trigger="logger.log('open')"
-                 k-on-close.trigger="logger.log('close')"
-                 k-on-change.trigger="logger.log('change')"
-                 k-on-select.trigger="logger.log('select')"
-                 k-on-data-bound.trigger="logger.log('dataBound')"
-                 k-on-filtering.trigger="logger.log('filtering')"
+                 k-on-open.delegate="logger.log('open')"
+                 k-on-close.delegate="logger.log('close')"
+                 k-on-change.delegate="logger.log('change')"
+                 k-on-select.delegate="logger.log('select')"
+                 k-on-data-bound.delegate="logger.log('dataBound')"
+                 k-on-filtering.delegate="logger.log('filtering')"
                  style="width: 100%;">
       </p>
       <p class="demo-hint">Hint: type "m"</p>
