--- a/sample/src/samples/button/api.html
+++ b/sample/src/samples/button/api.html
@@ -2,7 +2,7 @@
     <require from="./api.css"></require>
     <div id="example">
       <div class="demo-section k-content">
-        <button k-button="k-enable.bind: enabled; k-icon: ungroup" k-on-click.trigger="test()">Kendo UI Button</button>
+        <button k-button="k-enable.bind: enabled; k-icon: ungroup" k-on-click.delegate="test()">Kendo UI Button</button>
       </div>
 
       <div class="box">
