--- a/sample/src/samples/button/events.html
+++ b/sample/src/samples/button/events.html
@@ -1,11 +1,11 @@
 <template>
     <div id="example">
       <div class="demo-section k-content">
-        <button type="button" id="textButton" k-button k-on-click.trigger="btnClicked($event.detail)">
+        <button type="button" id="textButton" k-button k-on-click.delegate="btnClicked($event.detail)">
           Text Button
         </button>
-        <span id="refreshButton" k-button="k-icon: refresh" k-on-click.trigger="btnClicked($event.detail)">Refresh Button</span>
-        <a id="disabledButton" k-button="k-enable.bind: false" k-on-click.trigger="btnClicked($event.detail)">Disabled Button</a>
+        <span id="refreshButton" k-button="k-icon: refresh" k-on-click.delegate="btnClicked($event.detail)">Refresh Button</span>
+        <a id="disabledButton" k-button="k-enable.bind: false" k-on-click.delegate="btnClicked($event.detail)">Disabled Button</a>
 
         <p class="demo-hint">The disabled button will not fire click events.</p>
       </div>
