--- a/sample/src/samples/grid/binding-to-remote-data.html
+++ b/sample/src/samples/grid/binding-to-remote-data.html
@@ -1,5 +1,5 @@
 <template>
-  <k-grid k-data-source.bind="datasource" k-pageable.bind="true" k-filterable.bind="true" sortable.bind="true">
+  <k-grid k-data-source.bind="datasource" k-pageable.bind="true" k-filterable.bind="true" k-sortable.bind="true">
     <au-col title="OrderId" field="OrderID"></au-col>
     <au-col field="Freight"></au-col>
     <au-col title="Order Date" field="OrderDate" format="{0:MM/dd/yyyy}"></au-col>
