--- a/sample/src/samples/grid/binding-to-websocket.html
+++ b/sample/src/samples/grid/binding-to-websocket.html
@@ -1,5 +1,11 @@
 <template>
-  <!-- <k-grid view-model.ref="grid" toolbar.bind="['create']" auto-bind.bind="false" data-source.bind="datasource" sortable.bind="true" editable.bind="true" height.bind="550">
+  <!-- <k-grid k-view-model.ref="grid"
+          k-toolbar.bind="['create']"
+          k-auto-bind.bind="false"
+          k-data-source.bind="datasource"
+          k-sortable.bind="true"
+          k-editable.bind="true"
+          k-height.bind="550">
     <au-col field="UnitPrice"></au-col>
     <au-col field="Freight"></au-col>
     <au-col command="destroy" width.bind="150"></au-col>
