--- a/sample/src/samples/charts/sparkline/basic-use.html
+++ b/sample/src/samples/charts/sparkline/basic-use.html
@@ -1,65 +1,73 @@
 <template>
-  <h2>Note</h2>
-  <p> This sample does not work right now. We are tracking this <a href="https://github.com/aurelia-ui-toolkits/aurelia-kendoui-plugin/issues/177">here</a></p>
-
   <require from="./basic-use.css"></require>
-  <div class="demo-section k-content">
-       <div class="climate">
-           <h4>
-               Climate control history
-           </h4>
-           <table class="history">
-               <tr>
-                   <td class="spark">
-                     <k-sparkline data.bind="pressLogdata"></k-sparkline>
-                   </td>
-                   <td class="value">980<span>mb</span></td>
-               </tr>
-               <tr>
-                   <td class="spark">
-                     <k-sparkline k-data.bind="tempLogData"
-                        k-type="column"
-                        k-tooltip.bind="{format: '{0} &deg;C'}">
-                     </k-sparkline>
-                   </td>
-                   <td class="value">21<span>&deg;C</span></td>
-               </tr>
-               <tr>
-                   <td class="spark">
-                     <k-sparkline k-data.bind="humLogData"
-                        k-type="area"
-                        tooltip.bind="{format: '{0} %'}">
-                     </k-sparkline>
-                   </td>
-                   <td class="value">32<span>%</span></td>
-               </tr>
-           </table>
-       </div>
-       <div class="temperature">
-           <h4>
-               Temperature control
-           </h4>
-           <div class="stats">
-               <k-sparkline k-data.bind="[21,23]"
-                            k-type="bullet"
-                            k-value-axis.bind="tempRangeValueAxis"
-                            k-tooltip.bind="{visible: true}">
+  <div id="sparkline-basicuse">
+    <div class="demo-section k-content">
+         <div class="climate">
+             <h4>
+                 Climate control history
+             </h4>
+             <table class="history">
+                 <tr>
+                     <td class="spark">
+                       <k-sparkline k-series.bind="[{data: pressLogData}]"></k-sparkline>
+                     </td>
+                     <td class="value">980<span>mb</span></td>
+                 </tr>
+                 <tr>
+                     <td class="spark">
+                       <k-sparkline
+                          k-series.bind="[{
+                            data: tempLogData,
+                            type: 'column',
+                            tooltip: {format: '{0} &deg;C'}
+                          }]">
+                       </k-sparkline>
+                     </td>
+                     <td class="value">21<span>&deg;C</span></td>
+                 </tr>
+                 <tr>
+                     <td class="spark">
+                       <k-sparkline
+                          k-series.bind="[{
+                            data: humLogData,
+                            type: 'area',
+                            tooltip: {format: '{0} %'}
+                          }]">
+                       </k-sparkline>
+                     </td>
+                     <td class="value">32<span>%</span></td>
+                 </tr>
+             </table>
+         </div>
+         <div class="temperature">
+             <h4>
+                 Temperature control
+             </h4>
+             <div class="stats">
+               <k-sparkline
+                  k-series.bind="[{
+                    data: [21,23],
+                    type: 'bullet',
+                    tooltip: {visible: true}
+                  }]"
+                  k-value-axis.bind="tempRangeValueAxis">
                </k-sparkline>
-           </div>
-       </div>
-       <div class="conditioner">
-           <h4>
-               Conditioner working time
-           </h4>
-           <ul class="pie-list stats">
-               <li>MON <k-sparkline id="stats-mon" k-type="pie" k-data.bind="[14,10]"/></li>
-               <li>TUE <k-sparkline id="stats-tue" k-type="pie" k-data.bind="[8,16]"/></li>
-               <li>WED <k-sparkline id="stats-wed" k-type="pie" k-data.bind="[8,16]"/></li>
-               <li>THU <k-sparkline id="stats-thu" k-type="pie" k-data.bind="[12,12]"/></li>
-               <li>FRI <k-sparkline id="stats-fri" k-type="pie" k-data.bind="[6,18]"/></li>
-               <li>SAT <k-sparkline id="stats-sat" k-type="pie" k-data.bind="[1,23]"/></li>
-               <li>SUN <k-sparkline id="stats-sun" k-type="pie" k-data.bind="[5,19]"/></li>
-           </ul>
-       </div>
+             </div>
+         </div>
+         <div class="conditioner">
+             <h4>
+                 Conditioner working time
+             </h4>
+             <ul class="pie-list stats">
+                 <li>MON <k-sparkline k-series.bind="[{ type: 'pie', data: [14,10] }]"/></li>
+                 <li>TUE <k-sparkline k-series.bind="[{ type: 'pie', data: [8,16] }]"/></li>
+                 <li>WED <k-sparkline k-series.bind="[{ type: 'pie', data: [8,16] }]"/></li>
+                 <li>THU <k-sparkline k-series.bind="[{ type: 'pie', data: [12,12] }]"/></li>
+                 <li>FRI <k-sparkline k-series.bind="[{ type: 'pie', data: [6,18] }]"/></li>
+                 <li>SAT <k-sparkline k-series.bind="[{ type: 'pie', data: [1,23] }]"/></li>
+                 <li>SUN <k-sparkline k-series.bind="[{ type: 'pie', data: [5,19] }]"/></li>
+             </ul>
+         </div>
+     </div>
    </div>
 </template>
