--- a/sample/src/samples/autocomplete/api.html
+++ b/sample/src/samples/autocomplete/api.html
@@ -22,7 +22,7 @@
               <ul class="options">
                   <li>
                       <input id="value" type="text" class="k-textbox" ref="setGetInput"/>
-                      <button id="set" class="k-button" click.delegate="autocomplete.setValue(setGetInput.value)">Set value</button>
+                      <button id="set" class="k-button" click.delegate="autocomplete.value(setGetInput.value)">Set value</button>
                   </li>
                   <li style="text-align: right;">
                       <button id="get" class="k-button" click.delegate="getValue()">Get value</button>
