--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -11,7 +11,7 @@
                <div class="col-xs-12 col-sm-12">
                    <p>
                        <span style="font-size:18px">
-                           <img src="images/green.png">
+                           <img src="images/blue.png">
                            Implemented controls
                            &nbsp; &nbsp;
                            <img src="images/orange.png">
@@ -27,15 +27,15 @@
            <div class="row">
                <div class="col-xs-12 col-sm-2">
                    MOST POPULAR                                      <br>
-                   <img src="images/green.png">
+                   <img src="images/blue.png">
                    <a href="#/samples/grid">Grid</a>                         <br>
                    <a>Editor</a>                            <br>
                    <a>Scheduler</a>                         <br>
-                   <img src="images/green.png">
+                   <img src="images/blue.png">
                    <a href="#/samples/bar-charts">Bar Charts</a>             <br>
-                   <img src="images/green.png">
+                   <img src="images/blue.png">
                    <a href="#/samples/line-charts">Line Charts</a>           <br>
-                   <img src="images/green.png">
+                   <img src="images/blue.png">
                    <a href="#/samples/stock">Stock Charts</a>                <br>
                    <img src="images/orange.png">
                    <a href="#/samples/dropdownlist">DropDownList</a>         <br>
@@ -46,7 +46,7 @@
 
               <div class="col-xs-12 col-sm-2">
                    DATA MANAGEMENT                                   <br>
-                   <img src="images/green.png">
+                   <img src="images/blue.png">
                    <a href="#/samples/grid">Grid</a>                         <br>
                    <a>Spreadsheet</a>                       <br>
                    <a>Listview</a>                          <br>
@@ -55,8 +55,9 @@
                    <a>ScrollView</a>                        <br>
                    <br>
                    EDITORS                                           <br>
-                   <img src="images/green.png">
+                   <img src="images/blue.png">
                    <a href="#/samples/autocomplete">Autocomplete</a>         <br>
+                   <img src="images/orange.png">
                    <a>ColorPicker</a>                       <br>
                    <a href="#/samples/combobox">Combobox</a>                  <br>
                    <a>DatePicker</a>                        <br>
@@ -67,7 +68,7 @@
                    <a>MaskedTextBox</a>                     <br>
                    <a>MultiSelect</a>                       <br>
                    <a>Numeric TextBox</a>                   <br>
-                   <img src="images/green.png">
+                   <img src="images/blue.png">
                    <a href="#/samples/slider">Slider</a>                            <br>
                    <a>TimePicker</a>                        <br>
                    <a>Upload</a>                            <br>
@@ -76,39 +77,39 @@
 
               <div class="col-xs-12 col-sm-2">
                   CHARTS                                            <br>
-                  <img src="images/green.png">
+                  <img src="images/blue.png">
                   <a href="#/samples/area-charts">Area Charts</a>            <br>
-                  <img src="images/green.png">
+                  <img src="images/blue.png">
                   <a href="#/samples/bar-charts">Bar Charts</a>              <br>
-                  <img src="images/green.png">
+                  <img src="images/blue.png">
                   <a href="#/samples/box-plot-charts">Box Plot Charts</a>    <br>
-                  <img src="images/green.png">
+                  <img src="images/blue.png">
                   <a href="#/samples/bubble-charts">Bubble Charts</a>        <br>
-                  <img src="images/green.png">
+                  <img src="images/blue.png">
                   <a href="#/samples/bullet-charts">Bullet Charts</a>         <br>
-                  <img src="images/green.png">
+                  <img src="images/blue.png">
                   <a href="#/samples/donut-charts">Donut Charts</a>           <br>
-                  <img src="images/green.png">
+                  <img src="images/blue.png">
                   <a href="#/samples/funnel-charts">Funnel Charts</a>         <br>
-                  <img src="images/green.png">
+                  <img src="images/blue.png">
                   <a href="#/samples/line-charts">Line Charts</a>            <br>
-                  <img src="images/green.png">
+                  <img src="images/blue.png">
                   <a href="#/samples/pie-charts">Pie Charts</a>              <br>
-                  <img src="images/green.png">
+                  <img src="images/blue.png">
                   <a href="#/samples/polar-charts">Polar Charts</a>          <br>
-                  <img src="images/green.png">
+                  <img src="images/blue.png">
                   <a href="#/samples/radar-charts">Radar Charts</a>          <br>
-                  <img src="images/green.png">
+                  <img src="images/blue.png">
                   <a href="#/samples/range-charts">Range Bar Charts</a>      <br>
-                  <img src="images/green.png">
+                  <img src="images/blue.png">
                   <a href="#/samples/scatter-charts">Scatter Charts</a>      <br>
-                  <img src="images/green.png">
+                  <img src="images/blue.png">
                   <a href="#/samples/sparkline">Sparklines</a>               <br>
-                  <img src="images/green.png">
+                  <img src="images/blue.png">
                   <a href="#/samples/stock">Stock Charts</a>                 <br>
-                  <img src="images/green.png">
+                  <img src="images/blue.png">
                   <a href="#/samples/treemap">TreeMap</a>                            <br>
-                  <img src="images/green.png">
+                  <img src="images/blue.png">
                   <a href="#/samples/waterfall-charts">Waterfall Charts</a>  <br>
                   <br>
                   GAUGES                                             <br>
@@ -141,20 +142,22 @@
                   <a>Window</a>                             <br>
                   <br>
                   NAVIGATION                                         <br>
-                  <img src="images/green.png">
+                  <img src="images/blue.png">
                   <a href="#/samples/button">Button</a>                      <br>
                   <a>ButtonGroup</a>                        <br>
+                  <img src="images/orange.png">
                   <a>Menu</a>                               <br>
                   <a>PanelBar</a>                           <br>
                   <img src="images/orange.png">
                   <a href="#/samples/tabstrip">TabStrip</a>                  <br>
+                  <img src="images/orange.png">
                   <a href="#/samples/toolbar">ToolBar</a>                    <br>
                   <a>TreeView</a>                           <br>
                   <br>
                   INTERACTIVITY &amp; UX                             <br>
                   <a>Drag &amp; Drop</a>                    <br>
                   <a>Effects</a>                            <br>
-                  <img src="images/green.png">
+                  <img src="images/blue.png">
                   <a href="#/samples/progressbar">ProgressBar</a>            <br>
                   <a>Sortable</a>                           <br>
                   <a>Styling</a>                            <br>
