fix(docs): scroll to top after page switch
fixes https://github.com/aurelia-ui-toolkits/aurelia-kendoui-plugin/issues/237

--- a/sample/src/help/doc.html
+++ b/sample/src/help/doc.html
@@ -11,8 +11,8 @@
         </li>
       </ul>
     </div>
-    <div class="col-md-9">
-      <au-markdown url.bind="activeDoc">
+    <div class="col-md-9" ref="markdownCol">
+      <au-markdown url.bind="activeDoc" loaded.delegate="scrollToTop()">
       </au-markdown>
     </div>
   </div>
