looking for better names and structure of help section
fix(sample): looking for better names and structure of help section

--- a/sample/src/help/help.html
+++ b/sample/src/help/help.html
@@ -1,7 +1,7 @@
 <template>
     <require from="./doc"></require>
     <section>
-        <h2>Aurelia-KendoUI Bridge Help</h2>
+        <h3>Aurelia-KendoUI Components Catalog Help</h3>
 
           <div k-tabstrip k-on-select.delegate="tabSelected($event.detail)">
             <ul>
@@ -19,7 +19,7 @@
             </div>
             <div style="height: 790px;">
               <br> <br> <br> <br> <br> <br> <br> <br>
-              Let's put <a href="https://www.pubnub.com/blog/2015-08-25-webrtc-video-chat-app-in-20-lines-of-javascript/">Pubnub's WebRTC Video Chat </a>
+              Future home for <a href="https://www.pubnub.com/blog/2015-08-25-webrtc-video-chat-app-in-20-lines-of-javascript/">Pubnub's WebRTC Video Chat </a>
               here.
             </div>
           </div>
