more work on docs

--- a/sample/index.html
+++ b/sample/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Aurelia</title>
+    <title>Aurelia Catalog</title>
     <link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/samples.css">
     <link rel="stylesheet" href="styles/styles.css">
@@ -18,7 +18,7 @@
     <script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
 
     <div class="splash">
-      <div class="message">Aurelia KendoUI Samples</div>
+      <div class="message">Aurelia KendoUI Samples Catalog</div>
       <i class="fa fa-spinner fa-spin"></i>
     </div>
 
