--- a/sample/src/help/help.html
+++ b/sample/src/help/help.html
@@ -5,9 +5,9 @@
 
           <div k-tabstrip k-on-select.delegate="tabSelected($event.detail)">
             <ul>
-                <li class="k-state-active">Docs</li>
-                <li>Gitter Chat</li>
-                <li>Video Chat</li>
+                <li class="k-state-active">Components Docs</li>
+                <li>KendoUI Gitter Channel</li>
+                <li>WebRTC Collaboration</li>
             </ul>
             <div style="height: 790px;">
               <doc></doc>
