--- a/sample/src/about/about.html
+++ b/sample/src/about/about.html
@@ -6,20 +6,20 @@
 
         <div>
 
-            <div class="row">
-                <div class="col-xs-12 col-sm-2">
+<!--             <div class="row">
+                <div class="col-xs-12 col-sm-1">
 
                 </div>
-                <div class="col-xs-12 col-sm-7">
+                <div class="col-xs-12 col-sm-10">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sit amet est scelerisque, tristique mauris et, pharetra arcu. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean luctus mi sed purus placerat euismod. Cras dolor quam, sollicitudin nec ligula et, pellentesque efficitur dolor. Proin eget blandit nisl. Mauris venenatis porttitor risus a pulvinar. Aliquam tristique sem in eleifend pulvinar. Integer ac eros quis tellus volutpat semper quis in sapien. Morbi dapibus mattis leo vel aliquet. Vestibulum nec luctus ante. Curabitur tristique sapien vel nulla interdum efficitur. Maecenas pretium hendrerit nisi sed bibendum. Phasellus interdum risus ac laoreet aliquam.
 
 
                 </div>
-                <div class="col-xs-12 col-sm-2">
+                <div class="col-xs-12 col-sm-1">
 
                 </div>
             </div>
-            <hr>
+            <hr> -->
 
             <!-- Row 1 - 3 columns (images) -->
             <div class="row">
