polish installation section
fix(help): polish installation section

Improved vertical spacing a bit

--- a/sample/src/installation/index.html
+++ b/sample/src/installation/index.html
@@ -5,9 +5,9 @@
         <div k-tabstrip>
           <ul>
               <li class="k-state-active">Installation</li>
-              <li>Kendo Core</li>
-              <li>JSPM-git</li>
-              <li>Vendors</li>
+              <li>New from Github: Kendo Core</li>
+              <li>New from Telerik: JSPM-git</li>
+              <li>Having KendoUI already: Vendors</li>
           </ul>
           <div>
             <au-markdown url="installation/description.md"></au-markdown>
