all about this application help items

--- a/sample/src/installation/index.html
+++ b/sample/src/installation/index.html
@@ -1,6 +1,6 @@
 <template>
   <section>
-      <h2>Aurelia-KendoUI installation</h2>
+      <h3>Aurelia-KendoUI bridge installation</h3>
 
         <div k-tabstrip>
           <ul>
