Add components and plugins tutorials structure

--- a/sample/index.html
+++ b/sample/index.html
@@ -18,7 +18,7 @@
     <script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
 
     <div class="splash">
-      <div class="message">Aurelia KendoUI Samples Catalog</div>
+      <div class="message">Aurelia KendoUI Components Catalog</div>
       <i class="fa fa-spinner fa-spin"></i>
     </div>
 
