--- a/sample/src/nav-bar.html
+++ b/sample/src/nav-bar.html
@@ -18,7 +18,7 @@
         <a href="#">Theme</a>
     </li>
     <li>
-        <a route-href="route: help">Help</a>
+        <a route-href="route: help">Help/Docs</a>
     </li>
   </ul>
 
