add treeview to project status control

--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -41,7 +41,8 @@
                    <a href="#/samples/dropdownlist">DropDownList</a>         <br>
                    <a>Window</a>                            <br>
                    <a>Upload</a>                            <br>
-                   <a>TreeView</a>                          <br>
+                   <img src="images/blue.png">
+                   <a href="#/samples/treeview">TreeView</a><br>
                </div>
 
               <div class="col-xs-12 col-sm-2">
@@ -152,6 +153,8 @@
                   <a href="#/samples/tabstrip">TabStrip</a>                  <br>
                   <img src="images/orange.png">
                   <a href="#/samples/toolbar">ToolBar</a>                    <br>
+                  <img src="images/blue.png">
+                  <a href="#/samples/treeview">TreeView</a><br>
                   <a>TreeView</a>                           <br>
                   <br>
                   INTERACTIVITY &amp; UX                             <br>
