shrink font sizes
fix(sample): shrink font sizes

--- a/sample/src/help/help.html
+++ b/sample/src/help/help.html
@@ -1,7 +1,7 @@
 <template>
     <require from="./doc"></require>
     <section>
-        <h3>Aurelia-KendoUI Components Catalog Help</h3>
+        <h4>Components Catalog Help</h4>
 
           <div k-tabstrip k-on-select.delegate="tabSelected($event.detail)">
             <ul>
