--- a/sample/src/nav-bar.html
+++ b/sample/src/nav-bar.html
@@ -3,7 +3,7 @@
 
   <ul ref="menu">
     <li>
-        <a route-href="route: samples">Samples</a>
+        <a route-href="route: samples">Components Catalog</a>
     </li>
     <li>
         <a route-href="route: about">About</a>
