Updated project status

--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -41,7 +41,8 @@
                    <a href="#/samples/dropdownlist">DropDownList</a>         <br>
                    <a>Window</a>                            <br>
                    <a>Upload</a>                            <br>
-                   <a>TreeView</a>                          <br>
+                   <img src="images/blue.png">
+                   <a href="#/samples/treeview">TreeView</a>                          <br>
                </div>
 
               <div class="col-xs-12 col-sm-2">
@@ -60,7 +61,8 @@
                    <img src="images/orange.png">
                    <a>ColorPicker</a>                       <br>
                    <a href="#/samples/combobox">Combobox</a>                  <br>
-                   <a>DatePicker</a>                        <br>
+                   <img src="images/blue.png">
+                   <a href="#/samples/datepicker">DatePicker</a>                        <br>
                    <a>DateTimePicker</a>                    <br>
                    <img src="images/orange.png">
                    <a href="#/samples/dropdownlist">DropDownList</a>         <br>
