--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -69,7 +69,8 @@
                    <a>Editor</a>                            <br>
                    <a>MaskedTextBox</a>                     <br>
                    <a>MultiSelect</a>                       <br>
-                   <a>Numeric TextBox</a>                   <br>
+                   <img src="images/blue.png">
+                   <a href="#/samples/numerictextbox">Numeric TextBox</a>                   <br>
                    <img src="images/blue.png">
                    <a href="#/samples/slider">Slider</a>                            <br>
                    <a>TimePicker</a>                        <br>
@@ -154,7 +155,8 @@
                   <a href="#/samples/tabstrip">TabStrip</a>                  <br>
                   <img src="images/orange.png">
                   <a href="#/samples/toolbar">ToolBar</a>                    <br>
-                  <a>TreeView</a>                           <br>
+                  <img src="images/blue.png">
+                  <a href="#/samples/treeview">TreeView</a>                           <br>
                   <br>
                   INTERACTIVITY &amp; UX                             <br>
                   <a>Drag &amp; Drop</a>                    <br>
