refactor(samples): k-widget

--- a/sample/src/samples/chart/bar-charts/gap-and-spacing.html
+++ b/sample/src/samples/chart/bar-charts/gap-and-spacing.html
@@ -1,5 +1,6 @@
 <template>
   <k-chart  view-model.ref="chart"
+            k-widget.bind="widget"
             k-title.bind="{text: 'Site Visitors Stats \n /thousands/'}"
             k-legend.bind="{position: 'bottom'}"
             k-series-defaults.bind="seriesDefaults"
