--- a/sample/src/samples/chart/stock/pdf-export.html
+++ b/sample/src/samples/chart/stock/pdf-export.html
@@ -18,6 +18,6 @@
             k-category-axis.bind="{pane: 'volumePane'}"
             k-value-axis.bind="valueAxis"
             k-navigator.bind="navigator"
-            view-model.ref="stock">
+            k-widget.bind="stock">
   </k-stock>
 </template>
