--- a/sample/src/samples/chart/treemap/basic-use.html
+++ b/sample/src/samples/chart/treemap/basic-use.html
@@ -3,7 +3,7 @@
               k-data-source.bind="dataSource"
               k-value-field="value"
               k-text-field="name"
-              view-model.ref="treemap">
+              k-widget.bind="treemap">
   </k-treemap>
   <div class="box wide">
       <div class="box-col">
