--- a/sample/src/samples/treeview/api.html
+++ b/sample/src/samples/treeview/api.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="demo-section k-content">
-            <div k-treeview="k-data-source.bind:data" id="treeview" k-treeview.ref="treeview"></div>
+            <div k-treeview="k-data-source.bind:data; k-widget.bind: treeview" id="treeview"></div>
         </div>
     </div>
 </template>
