--- a/sample/src/samples/chart/pie-charts/pie-labels.html
+++ b/sample/src/samples/chart/pie-charts/pie-labels.html
@@ -1,5 +1,5 @@
 <template>
-    <k-chart    view-model.ref="chart"
+    <k-chart    k-widget.bind="chart"
                 k-title.bind="{text: 'What is you favourite sport?'}"
                 k-legend.bind="legend"
                 k-series-defaults.bind="seriesDefaults"
