--- a/sample/src/samples/progressbar/vertical-progressbar.html
+++ b/sample/src/samples/progressbar/vertical-progressbar.html
@@ -4,19 +4,19 @@
     <div id="vertical-progressbar">
       <div class="demo-section k-content">
           <div class="loading">
-              <div k-progress-bar.ref="pb1"
-                   k-progress-bar="k-type: chunk;
+              <div k-progress-bar="k-type: chunk;
                                    k-chunk-count: 4;
                                    k-min: 0;
                                    k-max: 4;
-                                   k-orientation: vertical"
+                                   k-orientation: vertical;
+                                   k-widget.bind: pb1"
                    k-on-complete.delegate="onTotalComplete()">
               </div>
 
-              <div k-progress-bar.ref="pb2"
-                   k-progress-bar="k-animation.bind: false;
+              <div k-progress-bar="k-animation.bind: false;
                                   k-show-status.bind: false;
-                                  k-orientation: vertical"
+                                  k-orientation: vertical;
+                                  k-widget.bind: pb2"
                    k-on-complete.delegate="onComplete()"
                    k-on-change.delegate="onChange($event.detail)">
               </div>
